fixes: tests aligns

--- a/ma-psicologia/src/pages/Home/stylesheet.css
+++ b/ma-psicologia/src/pages/Home/stylesheet.css
@@ -266,14 +266,16 @@ nav a:hover {
 .carousel-section {
     display: flex;
     align-items: start;
-    width: 80%;
+    width: 85%;
     flex-wrap: wrap;
     gap: 20px;
 }
 
 .carousel-text {
     flex: 1 1 300px;
-    padding-right: 20px;
+    padding-right: 50px;
+    hyphens: auto;
+    -webkit-hyphens: auto;
 }
 
 .carousel-title {
