--- a/ma-psicologia/src/pages/Psicoterapia/stylesheet.css
+++ b/ma-psicologia/src/pages/Psicoterapia/stylesheet.css
@@ -37,7 +37,6 @@ header {
 
 #menu {
     transition: max-height 0.3s ease, opacity 0.3s ease, transform 0.3s ease;
-    transform: translateY(-20px);
 }
 
 .header-logo-image {
@@ -211,6 +210,9 @@ nav a:hover {
     max-width: 800px;
     padding: 0 1rem;
     margin: 0 auto;
+    /* hyphens: auto;
+    -webkit-hyphens: auto; */
+    text-align: center;
 }
 
 .text-column h1 {
